2013-12-04 Added Custom CSS property to Paragraph addon
2013-12-04 Fixed issue with points on axis after 'check' in LineNumber addon
2013-12-03 Blockage displaying page navigation's arrows after clicking on the ExternalLinkButton
2013-12-02 Added drop event handler for gaps in Text module
2013-11-29 Fixed problem with errors counting in Memo Game addon
2013-11-27 Fixed problem with showing choice after reset
2013-11-22 New commands in module choice: show, hide, reset
2013-11-22 Fixed problem with initial setState in Paragraph addon
2013-11-20 Fixed problem with Source list not activity mode
2013-11-20 Source list can contain formatted text
2013-11-19 Fixed issue with Text Selection addon
2013-11-18 Fixed issue with axis custom values in Plot addon
2013-11-18 Added stop propagation on event click in Double State Button module.
2013-11-18 Added support for Eastern Arabic and Perso-Arabic numericals in Navigation Bar
2013-11-18 Added support for Eastern Arabic and Perso-Arabic numericals in Page Counter
2013-11-15 Fixed bug in selection with selecting last phrase
2013-11-15 Add markAs... command to choice module
2013-11-14 Scorm libraries updated to handle storing session time
2013-11-08 Fixed problem with leaping frames in Animation addon
2013-11-06 New JS library to handle SCORM 1.2
2013-11-05 Fixed issue with Double State Button on mLibro Android application
2013-10-31 Added 2 commands setClickDisabled and setClickEnabled to Image Viewer addon
2013-10-29 Fixed issue with precision in Plot addon
2013-10-25 Fixed problem with restoring gap states
2013-10-24 Fixed problem with Text Selection containg LaTeX with additional spaces
2013-10-23 Fixed tests in Single State Button
2013-10-23 Added 2 commands markAsCorrect and markAsWrong to Image Viewer addon
2013-10-22 Fixed problem with LaTeX in Text Selection addon
2013-10-21 Added displayName for addons' properties
2013-10-21 Added saving in state if addon Graph is started